Fixed footer text alignment

--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -21,5 +21,8 @@
 }
 
 .text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 2em;
 }
